# chatter-blocker

./: Cargo.toml  README.md
src/: autostart.rs  calibrate.rs  config.rs  filter.rs  main.rs  tray.rs
