[package]
name = "chatter-blocker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Shell", "Win32_System_LibraryLoader", "Win32_System_Threading", "Win32_Graphics_Gdi"] }
